--- a/.github/workflows/linux-ci.yml
+++ b/.github/workflows/linux-ci.yml
@@ -6,9 +6,9 @@ name: Linux CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -42,7 +42,7 @@ jobs:
           cd unix
           make
           
-      - name: test
+      - name: unit tests
         run: |
           # current time and time-zone:
           echo $TZ; timedatectl status
@@ -54,9 +54,11 @@ jobs:
           cd unix
           sudo make install
 
-      - name: test
+      - name: runtime test
         run: |
           echo 'if {[catch {package require tclclockmod; clock format -now}]} {puts stderr "ERROR!"; exit 1} else {puts "OK."}' | tclsh
 
       - name: clean
-        run: make clean
+        run: |
+          cd unix
+          make clean
